kafka-cluster/cruise-control-ui/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cruise-control-gateway
  namespace: kafka-cluster
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - cruise-control.local.io
