kafka-cluster/cruise-control-ui/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cruise-control-virtualservice
  namespace: kafka-cluster
spec:
  hosts:
    - cruise-control.local.io
  gateways:
    - cruise-control-gateway
  http:
    # 1. Send all auth-related traffic to the Proxy
    - match:
        - uri:
            prefix: /oauth2
      route:
        - destination:
            host: oauth2-proxy.oauth2-proxy.svc.cluster.local
            port:
              number: 80
    # 2. Send everything else to Cruise Control UI
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cruise-control-ui.kafka-cluster.svc.cluster.local
            port:
              number: 9090
